Invoking NoiseChisel completed, minor changes in option names
All the options that are particular to NoiseChisel are now explained
in the manual. Some of the options also underwent small corrections:

  - --minbfrac and --minnumfalse were moved under the Input category
    from the detection category in the output of --help. This was
    because these two options are used by the detection as well as
    segmentation steps.

  - --checkthresh was renamed to --checkthreshold. The user can even
    use --checkt to get the functionality. It is just more clear like
    this.

  - --numerosion was changed to --erode. This makes it much more
    easier and comparable to the --opening and --dilate options.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2015-06-11  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* src/noisechisel/args.h (options): `minbfrac' and `minnumfalse'
+	options moved under the `Input' category from the detections
+	category. This move was because these two options are used by both
+	the detection and segmentation steps and thus keeping them under
+	detection would be confusing. Also `checkthresh' was changed to
+	`checkthreshold'. Also, the option `numerosion' was changed to
+	`erode' to be consistent with the opening and dilate options.
+
 2015-06-10  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* src/mknoise/astmknoise.conf: Default background magnitude
